CCLE-8264 - Fix spacing for Find a site options on my sites page and frontpage.
Fixed cutoff text when resolution is small.

--- a/blocks/ucla_search/sass/styles.scss
+++ b/blocks/ucla_search/sass/styles.scss
@@ -1,13 +1,21 @@
 .ucla-search {
     fieldset div {
-        display: inline-block;
+        display: inline-flex;
         width: 3.25rem;
+        font-size: 12px;
     }
 
     // Remove extra padding that Boost theme puts in.
     .form-check-label {
-        padding-left: 0;
-        font-weight: 300;
+        padding-left: .75rem;
+        margin-right: 2rem;
+        font-size: 12px;
+    }
+
+    .form-check-inline .form-check-input {
+        position: absolute;
+        margin-top: -0.1rem;
+        margin-left: -.5rem;
     }
 
     .search-options {
@@ -48,8 +56,8 @@
     margin-top: 1rem;
 }
 #region-main .ucla-search {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
     text-align: center;
 }
 
